# a5120emu

./: .gitignore  APP_README.md  CLAUDE.md  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  README.md  SETUP.md  activate.sh  analyze_eprom.py  analyze_vram.py  disasm_k2526.py  quickstart.sh  run_gui.sh  test_boot.py  test_boot_detailed.py  test_c_api  test_c_api.c  test_integration.py  test_qt.py  test_reti.cpp
.claude/: settings.json
.claude/agents/: boot-disasm-analyst.md  code-explorer.md  cpp-coder.md  log-trace-analyzer.md  test-runner.md
app/: __init__.py  main.py
app/config/machines/: a5120.json
app/core_binding/: __init__.py  k1520.py
app/ui/: __init__.py  drive_widget.py  main_window.py  screen_widget.py
boot_disk/: @os.com  MSDOSCPA.COM  dienst.com  format.com  formatb.com  hardy.com  m80.com  pip.com  power.com  ramtest.com  tlc.com  tlc.par  tlcx.pma  wm.com  wm.hlp  zsid.com
build_trace/: CMakeCache.txt
core/: CMakeLists.txt  logger.cpp  logger.h
core/api/: k1520_api.cpp  k1520_api.h
core/bus/: k1520_bus.cpp  k1520_bus.h  koppelbus.h
core/cards/k2526/: k2526.cpp  k2526.h  rom_data.h
core/cards/k3526/: k3526.cpp  k3526.h
core/cards/k5122/: k5122.cpp  k5122.h
core/cards/k5122v2/: k5122v2.cpp  k5122v2.h
core/cards/k7024/: charset_cyrillic.h  charset_latin.h  k7024.cpp  k7024.h
core/cards/k8025/: k8025.cpp  k8025.h
core/machines/a5120/: a5120.cpp  a5120.h
core/peripherals/floppy_drive/: bit_codec.cpp  bit_codec.h  disk_image.cpp  disk_image.h  drive_profile.cpp  drive_profile.h  floppy_drive.cpp  floppy_drive.h  floppy_drive2.cpp  floppy_drive2.h  format_parser.cpp  format_parser.h  hfe_image.cpp  hfe_image.h  raw_sector_image.cpp  raw_sector_image.h  track_codec.cpp  track_codec.h  track_image.cpp  track_image.h
core/peripherals/k7637/: k7637.cpp  k7637.h
core/primitives/: eprom_device.h  ram_device.h  z80.cpp  z80.h  z80_ctc.cpp  z80_ctc.h  z80_ctc.h.bak  z80_pio.cpp  z80_pio.h  z80_sio.cpp  z80_sio.h  z80_sio.h.bak
cpa_src/: bdos.erl  bios.erl  bios.mac  bios.prn  bios_org.mac  bioscdrv.mac  biosch54.mac  bioschd.mac  bioschdc.mac  bioschk.mac  bioscld1.mac  bioscld2.mac  bioscld3.mac  bioscp54.mac  bioscp56.mac  bioscpb.mac  bioscpio.mac  bioscrt.mac  bioscrtc.mac  bioscsib.mac  bioscsio.mac  biosdpb.mac  biosdpbm.mac  biosdsk.mac  biosdskb.mac  biosdskc.mac  biosdskp.mac  biosdskt.mac  biosdskw.mac  bioskbd.mac  bioskbdc.mac  biosmem.mac  biosmon.mac  biosnuc.mac  biosorig.mac  biosraf.mac  biosrafc.mac  biosrafi.mac  biosrem.mac  biosremc.mac  (+13 more)
cparun/: CMakeLists.txt  LICENSE.txt  LIESMICH.md  README.md
cparun/src/: cparun.cpp  cpm_bdos.cpp  cpm_bdos.h  memory.cpp  memory.h  z80.cpp  z80.h
disks/: cpadisk.img  cpadisk_02.hfe  cpadisk_02.img  cpadisk_autofs_clock_noautoexec.hfe  cpadisk_autofs_clock_noautoexec.img  cpadisk_autofs_clock_noautoexec.prn  cpadisk_autofs_noclk_noautoexec.hfe  cpadisk_autofs_noclk_noautoexec.img  cpadisk_autofs_noclk_noautoexec.prn  cpadisk_mitUhr_01.hfe  cpadisk_mitUhr_01.img  cpadisk_noFormatDetect_01.img
doc/: K1520_architecture.md  analyse_bootloader.md  analyse_cpa_boot.md  analyse_zre_rom_boot.md  boot_analysis.md  bootsec.md  cpa_format_detection.md  cpp_testsyste.md  open_points.md  prompts.md  refactoring_floppy_emulator.md
doc/EPROMS/: K2526ROM.MAC  analyse_bootrom.md  zre.prn  zre.rom  zre_rom.asm
doc/EPROMS/K2526/: AUTOEXEC.Z80  K2526ROM.BAK  K2526ROM.COM  K2526ROM.MAC  K2526ROM.PRN  K2526ROM.REL  SPTESTRO.COM  SPTESTRO.MAC  SPTESTRO.REL  SYL.000
doc/design/: 00_konfiguration.md  01_k1520_bus.md  02_primitives.md  03_k2526_zre.md  04_k3526_ops.md  05_k7024_abs.md  06_k8025_ass.md  07_k5122_afs.md  08_k7637_keyboard.md  09_floppy_drive.md  10_c_api.md  11_python_app.md  12_testing.md
doc/original_docs/: 7024zg1.hex  7024zg2.hex
doc/trascripted/: Anschlußsteuerung K 8025.50 und K 8025.80.md  Bildschirmkarte K 7024.30 und K 7024.40.md  Büro Computer Robotron A5120.md  CPU_U8001_8002.md  CPU_U880D.md  CTC_U875D.md  DMA_U959D.md  Floppy Anschlußsteuerung K 5122.md  Linieninterface BUS K 1520.md  MMU_8010.md  PIO_U855D.md  SIO_U856D.md  Serielle Tastatur K 7637.XX.md  Speichersteckeinheiten K 3520, 3521, 3525, 3820.md  Speichersteckeinheiten K 3521.20, K 3626.31,K 3526, K 3822.02.md  Zentrale RecheneinheitK 2526 _ K 2527.md
docs/: README.md  bootsec.mac  cpabcgen.com
src/: a5120emu.cpp  cpa_bios.cpp  cpa_bios.h  cparun.cpp  cpm_bdos.cpp  cpm_bdos.h  floppy.cpp  floppy.h  font8x8.h  memory.cpp  memory.h  terminal.h  terminal_ansi.cpp  terminal_sdl.cpp  z80.cpp  z80.h
tests/: test_main.cpp
tests/cpp/: test_bit_codec.cpp  test_boot_integration.cpp  test_bus.cpp  test_callstack_tracker.cpp  test_coverage_diff.cpp  test_ctc.cpp  test_dbg_commands.cpp  test_disk_image_raw.cpp  test_drive_profile.cpp  test_event_bp.cpp  test_expr_eval.cpp  test_floppy.cpp  test_floppy_drive2.cpp  test_format_parser.cpp  test_hfe_image.cpp  test_k2526.cpp  test_k3526.cpp  test_k5122.cpp  test_k5122v2.cpp  test_k7024.cpp  test_k7637.cpp  test_k8025.cpp  test_machine_snapshot.cpp  test_mem_watch.cpp  test_pio.cpp  test_prn_listing.cpp  test_robotron_track.cpp  test_sio.cpp  test_track_codec.cpp  test_until_cond.cpp  test_z80.cpp
tests/fixtures/: cpa_mini.hfe  cpa_mini.img
tools/: README.md  boot_trace.cpp  boot_trace.md  callstack_tracker.h  coverage_diff.h  dbg_commands.h  dev.sh  disasm_difftest.py  eprom_to_h.py  event_bp.h  expr_eval.h  floppy_diag.cpp  format_driver.cpp  gen_zre_prn.py  how_to_debug_and_trace.md  img_to_hfe.py  k1520dbg.cpp  k1520dbg.md  kbd_test.cpp  mem_watch.h  missing_features.md  prn_listing.h  requirements.txt  until_cond.h  z80_disasm.md  z80_disasm.py  z80_disasm2.py  z80_disasm3.py  z80dis_min.h
tools/bootsec/: README.md  apply_disasm.py  bdos_analyze.py  bootsec_analyze.py  build.py  split_sources.py
tools/bootsec/src/: boot_bios.mac  bootsec.mac.bak  bootsec_syl.mac  mini_bdos.mac  mini_bdos_asm.mac
tools/romread/: README.md  build.py  romread.com
tools/romread/src/: romread.mac
